WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
319217
Fold uninitialized RenderTable local in RenderTreeBuilder::attachToRenderElement
https://bugs.webkit.org/show_bug.cgi?id=319217
Summary
Fold uninitialized RenderTable local in RenderTreeBuilder::attachToRenderElement
Ahmad Saleem
Reported
2026-07-12 22:16:43 PDT
ssia - just clean-up
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-12 22:16:50 PDT
<
rdar://problem/182074760
>
Ahmad Saleem
Comment 2
2026-07-12 22:17:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69225
EWS
Comment 3
2026-07-13 09:29:46 PDT
Committed
317053@main
(bc564ecb10b0): <
https://commits.webkit.org/317053@main
> Reviewed commits have been landed. Closing PR #69225 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug