Fold uninitialized RenderTable local in RenderTreeBuilder::attachToRenderElement https://bugs.webkit.org/show_bug.cgi?id=319217 rdar://182074760

Reviewed by Alan Baradlay.

attachToRenderElement() declared `RenderTable* table;` uninitialized and
assigned it in both branches of an if/else. Fold this into a single
initialized declaration by inverting the guard with dynamicDowncast(),
which also removes the misleadingly-named `afterChild` local (it referred
to the previous sibling / last child, not an "after child").

No behavior change, just clean-up.

* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElement):

Canonical link: https://commits.webkit.org/317053@main